<resources>
    <string name="app_name">FitGainz</string>
    <string name="client_id">2282HD</string>
    <string name="client_secret">35235d4201e235c7e74abb1283bcd573</string>

    <string name="login">Log In</string>

    <string name="days_input_error">Please enter a value greater than 0</string>

    <string name="user_full_name">Logged In As:</string>
    <string name="input_days">Enter Number of Days</string>
    <string name="get_steps">Get Steps List</string>
    <string name="get_today_summary">Get Today\'s Summary</string>

    <string name="logout">Log Out</string>
    <string name="logout_ask">Do you want to log out?</string>
    <string name="logout_confirm">You have successfully logged out</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_steps">Steps</string>
    <string name="dashboard_calories">Calories Burned</string>
    <string name="dashboard_avrgHeartrate">Avrg Heartrate</string>
    <string name="dashboard_maxHeartrate">Max Heartrate</string>
    <string name="dashboard_minHeartrate">Min Heartrate</string>
    <string name="dashboard_elevation">Elevation</string>
    <string name="dashboard_timeActive">Time Active</string>
    <string name="dashboard_distance">Distance</string>

    <!--Spinner Challenge Types -->
    <string-array name="challenge_types">
        <item>Steps</item>
        <item>Calories Burned</item>
        <item>Floors Climbed</item>
        <item>Distance Traveled</item>
        <item>Hours Active</item>
    </string-array>

    <!--ming's additions-->
    <string name="challenge_progression">Challenge Progression</string>
    <string name="user_progress">User Progress</string>
    <string name="Start"> START</string>
    <string name="End">END</string>
    <string name="Ming">Ming</string>
    <string name="Jordan">Jordan</string>
    <string name="Leslie">Leslie</string>
    <string name="Adrian">Adrian</string>
    <string name="Noam">Noam</string>
    <string name="tab_1">Tab1</string>
    <string name="tab_2">Tab2</string>
    <string name="tab_3">Tab3</string>
    <string name="start_challenge">START CHALLENGE</string>
    <string name="challenge_progress">CHALLENGE PROGRESS</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="view_challenges">View Challenges</string>
    <string name="create_challenge_activity">Create New Challenge</string>
</resources>
