<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:id="@+id/dashbordMain_StepsCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/border"
                    android:clickable="true"
                    android:onClick="openDetailActivity"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_dashboard_steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="999"
                        android:textAlignment="center"
                        android:textColor="@color/bg_light"
                        android:textSize="24sp" />


                    <ImageView
                        android:id="@+id/imageView_dashboard_steps"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/steps" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_steps"
                        android:textAlignment="center"
                        android:textColor="@color/bg_light"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dashbordMain_DistanceCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/border"
                    android:onClick="openDetailActivity"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_dashboard_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="6.3 Miles"
                        android:textAlignment="center"
                        android:textColor="@color/bg_light"
                        android:textSize="24sp" />


                    <ImageView
                        android:id="@+id/imageView_dashboard_distance"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/distance" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_distance"
                        android:textAlignment="center"
                        android:textColor="@color/bg_light"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <LinearLayout
                    android:id="@+id/dashbordMain_ElevationCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/border"
                    android:onClick="openDetailActivity"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_dashboard_elevation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="11"
                        android:textAlignment="center"
                        android:textColor="@color/bg_light"
                        android:textSize="24sp" />


                    <ImageView
                        android:id="@+id/imageView_dashboard_elevation"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/stairs" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_elevation"
                        android:textAlignment="center"
                        android:textColor="@color/bg_light"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dashbordMain_TimeActiveCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/border"
                    android:onClick="openDetailActivity"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_dashboard_timeActive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="8h 22m"
                        android:textAlignment="center"
                        android:textColor="@color/bg_light"
                        android:textSize="24sp" />


                    <ImageView
                        android:id="@+id/imageView_dashboard_timeActive"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/heart" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_timeActive"
                        android:textAlignment="center"
                        android:textColor="@color/bg_light"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <LinearLayout
                    android:id="@+id/dashbordMain_CaloriesCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/border"
                    android:onClick="openDetailActivity"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_dashboard_calories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="999"
                        android:textAlignment="center"
                        android:textColor="@color/bg_light"
                        android:textSize="24sp" />


                    <ImageView
                        android:id="@+id/imageView_dashboard_calories"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/calories" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_calories"
                        android:textAlignment="center"
                        android:textColor="@color/bg_light"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"></LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.roughike.bottombar.BottomBar
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            app:bb_tabXmlResource="@xml/bottombar_three_tabs" />
    </RelativeLayout>

</LinearLayout>